@@ -141,6 +141,7 @@
             --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
             --add-opens com.azure.storage.queue/com.azure.storage.queue=ALL-UNNAMED
             --add-opens com.azure.storage.queue/com.azure.storage.queue.implementation=ALL-UNNAMED
+            --add-opens com.azure.storage.queue/com.azure.storage.queue.models=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
